--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "start-api": "cd api && venv/bin/flask run --no-debugger",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -17,5 +18,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
+
+ "proxy": "http://localhost:5000",
+  
   "private": true
-}
+
+  
+} 
+
+
