--- a/app.json
+++ b/app.json
@@ -28,6 +28,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(OxygenInformatics) to access your camera.",
+          "microphonePermission": "Allow $(OxygenInformatics) to access your microphone"
+        }
+      ]
+    ]
   }
+
 }
