--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "ad-b2c-react-native": "^2.0.1",
     "expo": "^46.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "^12.1.1",
     "native": "^0.2.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-paper": "^5.2.0",
+    "react-native-paper": "^5.5.2",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.6"
+    "react-native-video": "^5.2.1",
+    "react-native-video-player": "^0.14.0",
+    "styled-components": "^5.3.6",
+    "expo-camera": "~12.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
