camera install + photo gallery setup

--- a/app.json
+++ b/app.json
@@ -37,7 +37,19 @@
           "cameraPermission": "Allow $(OxygenInformatics) to access your camera.",
           "microphonePermission": "Allow $(OxygenInformatics) to access your microphone"
         }
+      
+
+       
+        
+      ],[
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
       ]
+      
     ]
   }
 
