--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "ad-b2c-react-native": "^2.0.1",
     "expo": "^46.0.0",
+    "expo-camera": "~12.5.0",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "^12.1.1",
     "native": "^0.2.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^5.5.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -27,7 +29,7 @@
     "react-native-video": "^5.2.1",
     "react-native-video-player": "^0.14.0",
     "styled-components": "^5.3.6",
-    "expo-camera": "~12.5.0"
+    "expo-media-library": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
