--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-video": "^5.2.1",
     "react-native-video-player": "^0.14.0",
     "styled-components": "^5.3.6",
-    "expo-media-library": "~14.2.0"
+    "expo-media-library": "~14.2.0",
+    "expo-av": "~12.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
