--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "ad-b2c-react-native": "^2.0.1",
     "async": "^3.2.4",
-    "expo": "^46.0.0",
-    "expo-auth-session": "~3.7.4",
-    "expo-av": "~12.0.4",
-    "expo-camera": "~12.5.0",
-    "expo-crypto": "~11.0.0",
-    "expo-media-library": "~14.2.0",
-    "expo-random": "~12.3.0",
-    "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "~11.0.0",
+    "expo": "^49.0.0",
+    "expo-auth-session": "~5.0.2",
+    "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-media-library": "~15.4.0",
+    "expo-random": "~13.2.0",
+    "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "native": "^0.2.0",
-    "react": "18.0.0",
-    "react-native": "0.69.9",
-    "react-native-gesture-handler": "~2.5.0",
+    "react": "18.2.0",
+    "react-native": "0.72.3",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.5.2",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-video-player": "^0.14.0",
@@ -38,7 +40,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "proxy": "http://localhost:5000",
   "private": true
